# sparse-layers

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/butterfly_layers/: __init__.py
src/butterfly_layers/layers/: __init__.py  butterfly_mlp.py  butterfly_multi_head_attention.py  custom_mlp.py  multi_head_attention.py  padded_butterfly_linear.py
src/butterfly_layers/sse/: __init__.py  attention.py  attention_adaptive.py  linear_attention.py  masking_ops.py  multi_head_attention.py  multi_partition_state.py  multi_partition_state_config.py  partition_selector.py  partition_selector_config.py  sparse_softmax.py
src/sparse_layers/: __init__.py
src/sparse_layers/layers/: __init__.py  butterfly_linear.py  butterfly_mlp.py  butterfly_multi_head_attention.py  custom_mlp.py  padded_butterfly_linear.py  simple_mlp.py
src/sparse_layers/models/: __init__.py  _baselines.py  butterfly_mlp.py  butterfly_multi_head_attention.py  custom_mlp.py  multi_head_attention.py  simple_mlp.py  sse_multi_head_attention.py
src/sparse_layers/modules/: __init__.py  custom_linear.py  (+7 more)
tests/: test_boundary.py  test_butterfly_linear.py  test_butterfly_mlp.py  test_butterfly_multi_head_attention.py  test_custom_linear.py  test_custom_mlp.py  test_linear_attention.py  test_multi_head_attention.py  test_padded_butterfly_linear.py  test_simple_mlp.py  test_sse_attention.py  test_sse_attention_adaptive.py  test_sse_masking_ops.py  test_sse_multi_head_attention.py  test_sse_multi_partition_state.py  test_sse_partition_selector.py  test_sse_sparse_softmax.py  test_sse_varlen_ops.py
(+15 files in other folders)
