[project]
name = "sparse-layers"
version = "0.2.3"
requires-python = ">= 3.8"
description = "Structured sparse layers for building memory-efficient neural networks"
license = "MIT"
authors = [
    { name = "Philipp Hematty", email = "34508934+PhilHem@users.noreply.github.com" },
]
readme = "README.md"
keywords = ["butterfly", "neural-network", "sparse", "pytorch", "attention", "sse"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "pydantic>=2.12.4,<3",
]

[project.urls]
Homepage = "https://github.com/PhilHem/sparse-layers"
Repository = "https://github.com/PhilHem/sparse-layers"

[project.optional-dependencies]
dev = ["pytest", "pytest-xdist>=3.8.0,<4", "pytest-cov>=7.0.0,<8", "ruff", "pyrefly"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/sparse_layers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/sparse_layers"]
omit = ["*/tests/*"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF059"]

[tool.pyrefly]
project_includes = ["src"]
